<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mollie.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <View
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            style="@style/QuestionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one_title" />

        <TextView
            android:id="@+id/question_one_text"
            style="@style/QuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            />

        <EditText
            android:id="@+id/question_one_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_here_hint" />

        <TextView
            style="@style/QuestionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two_title" />

        <TextView
            android:id="@+id/question_two_text"
            style="@style/QuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_two"/>

        <RadioGroup
            android:id="@+id/question_two_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/surfacing"
                android:text="@string/surfacing" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swing_time"
                android:text="@string/swing_time" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/the_heart_goes_last"
                android:text="@string/the_heart_goes_last" />

        </RadioGroup>

        <View
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            style="@style/QuestionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_three_title" />

        <TextView
            android:id="@+id/question_three_text"
            style="@style/QuestionText"
            android:layout_width="match_parent"
            android:text="@string/question_three"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/maddaddam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maddaddam" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/oryx_and_crake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oryx_and_crake" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/incorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surfacing" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/year_of_the_flood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_year_of_the_flood" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            style="@style/QuestionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_four_title" />

        <TextView
            android:id="@+id/question_four_text"
            style="@style/QuestionText"
            android:text="@string/question_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/question_four_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/angel_catbird"
                android:text="@string/angel_catbird" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/devil_dogfish"
                android:text="@string/devil_dogfish" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/evil_egghead"
                android:text="@string/evil_egghead" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
